fixed search-glass icon spacing

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -95,7 +95,7 @@ h3#site-title {
 
 .search-wrap button {
 	border-radius: 0;
-	line-height: 32px;
+	height: 32px;
 	margin-bottom: 0;
 	margin-left: -6px;
 	padding: 0;
@@ -108,7 +108,7 @@ h3#site-title {
 	font: normal 18px/1 'Genericons';
 	content: '\f400';
 	vertical-align: middle;
-	padding: 0 7px;
+	padding: 3px 7px;
 }
 
 /* =NAVIGATION
